# pycrust

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.py
PyCRUST/: CMakeLists.txt  __init__.py  setup.sh
PyCRUST/cpp/: CMakeLists.txt  G4Includes.hh  LowECutStackingAction.h  PyCRUST.h  PyCRUSTModule.cxx
PyCRUST/cpp/actions/: ExampleUserSteppingAction.h  OpticalActionInitialization.cc  OpticalActionInitialization.hh  OpticalRunAction.cc  OpticalRunAction.hh  OpticalStackingAction.cc  OpticalStackingAction.hh  OpticalSteppingAction.cc  OpticalSteppingAction.hh  __init__.h
PyCRUST/cpp/analysis/: PandasAnalysisManager.h  __init__.h
PyCRUST/cpp/generator/: CRYPrimaryGeneratorAction.hh  __init__.h
PyCRUST/cpp/geometry/: GeometryUtils.h  SimplePrimitives.h  __init__.h
PyCRUST/cpp/physics/: OpticalPhysics.cc  OpticalPhysics.hh  WLSOpticalPhysics.cc  __init__.h
PyCRUST/cpp/sensitive/: ExampleDetectorConstruction.h  __init__.h
PyCRUST/py/: __init__.py
docker/: Dockerfile
pycrust/: __init__.py
support/Database/: __init__.py  defaults.py
support/Examples/: CRYAnalysis-2.py  CRYAnalysis.ipynb  CRYAnalysis.py  DataBaseLoader.ipynb  G4History.macro  GammaRaySensingExample.ipynb  Geant4Analysis.py  LazyLoaderExamples.ipynb  NeutronModeration.ipynb  OpticalPhotonTests.ipynb  OpticalPhotonTests.py  OpticalPhysicsExample.ipynb  UpdatedAnalysis.ipynb
support/Help/: AppDevelopers.ipynb  C++Examples.ipynb  MaterialList.ipynb  PhysicsLists.ipynb  PhysicsReference.ipynb
support/Tools/: IAEAChartOfNuclides.ipynb  PlotDigitizer.ipynb  RadProCalculator.ipynb
(+12 files in other folders)
